Fix location display alignment

--- a/src/components/ResultDisplay.css
+++ b/src/components/ResultDisplay.css
@@ -55,6 +55,7 @@
 
   .info {
     font-size: var(--fs-600);
+    text-align: start;
   }
 
   .secondary-heading {
